# sqlx-praxis

./: Cargo.toml
migrations/: 20210924162926_posts.sql
src/: main.rs  models.rs
