[package]
name = "sqlx-praxis"
version = "0.1.1"
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
sqlx = { version = "0.5.7", features = [ "sqlite", "runtime-tokio-rustls" ] }
dotenv = "0.15.0"
anyhow = "1.0.44"
#serde = "1.0.130"
sql-builder = "3.1.1"
derive_more = "0.99.16"