[package]
name = "sqlx-praxis"
version = "0.1.2"
edition = "2018"

[dependencies]
tokio = { version = "1.12", features = ["full"] }
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-builder = "3.1"
derive_more = "0.99"